# robotics-tuw

./: .gitattributes  .gitmodules  Dockerfile  Dockerfile.netcat  README.md  docker-compose.yaml  gui-docker-fix.bash
other/: gui_config_full.rviz  preparation-steps.bash
other/a2_tello-ctrl/: mock-state-packets.sh  tello_ctrl.py
other/opencv-calibrate/: calibrate.py  djitelloedu-front.camera.yaml  fp5.camera.yaml  stella_config_filled.djitelloedu-front.yaml  stella_config_filled.fp5.yaml  to_stella_config.py
src/: qtdesign.ui
src/a1_camera/: CMakeLists.txt  package.xml
src/a1_camera_pkg/: package.xml  setup.cfg  setup.py
src/a1_camera_pkg/a1_camera_pkg/: camera_node.py
src/a1_interfaces/: CMakeLists.txt  package.xml
src/a1_interfaces/msg/: StampedImage.msg
src/a1_mission_control/: CMakeLists.txt  package.xml
src/a1_mission_control_pkg/: package.xml  setup.cfg  setup.py
src/a1_mission_control_pkg/a1_mission_control_pkg/: mission_control_node.py
src/a1_obj_detect/: CMakeLists.txt  package.xml
src/a1_obj_detect_pkg/: package.xml  setup.cfg  setup.py
src/a1_obj_detect_pkg/a1_obj_detect_pkg/: object_detect_node.py
src/a2_jupyter/: ppmrob.yml  ppmrob_cuda.yml  run_jupyter.sh
src/a2_jupyter/dcnn/: PPMROB - DCNN.ipynb
src/a2_jupyter/dcnn/.ipynb_checkpoints/: PPMROB - DCNN-checkpoint.ipynb
src/a2_jupyter/dcnn/nets/: fashionMNIST.pt
src/a2_jupyter/dcnn/resources/: plotcm.py
src/a2_jupyter/intro/: PPMROB - Einführung in pyTorch.ipynb
src/a2_jupyter/intro/.ipynb_checkpoints/: PPMROB - Einführung in pyTorch-checkpoint.ipynb
src/a2_tello-ctrl/: tello_ctrl.py
src/chatter_interfaces/: CMakeLists.txt  package.xml
src/chatter_interfaces/install/: local_setup.sh  setup.sh
src/chatter_interfaces/install/chatter_interfaces/include/chatter_interfaces/chatter_interfaces/msg/: rosidl_typesupport_introspection_c__visibility_control.h  traffic_chatter_message.hpp
src/chatter_interfaces/install/chatter_interfaces/include/chatter_interfaces/chatter_interfaces/msg/detail/: traffic_chatter_message__builder.hpp  traffic_chatter_message__struct.hpp  traffic_chatter_message__type_support.c  traffic_chatter_message__type_support.cpp
src/chatter_interfaces/install/chatter_interfaces/local/lib/python3.10/dist-packages/chatter_interfaces/: _chatter_interfaces_s.ep.rosidl_typesupport_c.c  _chatter_interfaces_s.ep.rosidl_typesupport_fastrtps_c.c  _chatter_interfaces_s.ep.rosidl_typesupport_introspection_c.c
src/chatter_interfaces/install/chatter_interfaces/local/lib/python3.10/dist-packages/chatter_interfaces/msg/: __init__.py  _traffic_chatter_message.py
src/chatter_interfaces/install/chatter_interfaces/share/ament_index/resource_index/parent_prefix_path/: chatter_interfaces
src/chatter_interfaces/install/chatter_interfaces/share/ament_index/resource_index/rosidl_interfaces/: chatter_interfaces
src/chatter_interfaces/install/chatter_interfaces/share/chatter_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/chatter_interfaces/install/chatter_interfaces/share/chatter_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  chatter_interfaces__rosidl_typesupport_cExport.cmake  chatter_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  chatter_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  chatter_interfaces__rosidl_typesupport_introspection_cExport.cmake  chatter_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_chatter_interfaces__rosidl_generator_cExport-noconfig.cmake  export_chatter_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake
src/chatter_interfaces/install/chatter_interfaces/share/chatter_interfaces/msg/: TrafficChatterMessage.idl  TrafficChatterMessage.msg
src/chatter_interfaces/log/: latest_build
src/chatter_pkg/: package.xml  setup.cfg  setup.py
src/chatter_pkg/chatter_pkg/: publisher_node.py  subscriber_node.py  tutorial_node.py
src/command_unit/: package.xml  setup.cfg  setup.py
src/command_unit/command_unit/: command_node.py  control_modules.py  guarded_events.py  monolithic_command.py
src/drone_interface_unit/: package.xml  setup.cfg  setup.py
src/drone_interface_unit/drone_interface_unit/: drone_interface_node.py  tello_ctrl_wrapper.py
src/drone_interface_unit/drone_interface_unit/djitellopy/: tello.py
src/drone_system_msgs/: CMakeLists.txt  package.xml
src/drone_system_msgs/msg/: DroneCmdResponse.msg  DroneCommand.msg  DroneCommandFlags.msg  DroneNativeStatus.msg
src/drone_system_msgs/srv/: DroneActionCmd.srv  DroneCommand.srv  DroneInterfaceCommand.srv  DroneMoveCmd.srv  DroneRotateCmd.srv
src/launch/launch/: paths.py  system.launch.py
src/mock-drone/: mock-drone.py
src/opencv-calibrate/: djitelloedu-front.camera.yaml  fp5.camera.yaml  stella_base_config.yaml  stella_config_filled.yaml
src/resources/: CMakeLists.txt  package.xml
src/resources/meshes/: drone_adapted.stl  drone_location_indicator.stl
src/resources/rviz2/: full.rviz
src/resources/urdf/: quad.urdf
src/rviz_enhanced_gui_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
src/rviz_enhanced_gui_plugins/include/rviz_enhanced_gui_plugins/: visibility_control.hpp
src/rviz_enhanced_gui_plugins/include/rviz_enhanced_gui_plugins/rts_pose_tool/: rts_pose_tool.hpp
src/rviz_enhanced_gui_plugins/src/rviz_enhanced_gui_plugins/rts_pose_tool/: rts_pose_tool.cpp
src/rviz_panel_tutorial/: CMakeLists.txt  package.xml
src/rviz_panel_tutorial/include/rviz_panel_tutorial/: demo_panel.hpp
src/rviz_panel_tutorial/src/: demo_panel.cpp
