<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_enhanced_gui_plugins</name>
  <version>0.0.0</version>
  <description>Enhanced plugins for rviz2 gui, based on the rviz2 default plugins</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

<build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>

  <build_export_depend>rviz_ogre_vendor</build_export_depend>

  <!-- dependencies from default_plugins -->
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz_ogre_vendor</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>gz_math_vendor</depend>
  <depend>image_transport</depend>
  <depend>interactive_markers</depend>
  <depend>laser_geometry</depend>
  <depend>nav_msgs</depend>
  <depend>map_msgs</depend>
  <depend>pluginlib</depend>
  <depend>point_cloud_transport</depend>
  <depend>rclcpp</depend>
  <depend>resource_retriever</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
